--- a/src/popup.html
+++ b/src/popup.html
@@ -5,26 +5,53 @@
   <script src="./js/popup.js"></script>
   <link rel="stylesheet" href="./css/popup.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
   <div class="container">
-    <h4>Tabs Auto Switcher Options</h4>
+    <h3>Tabs Auto Switcher Options</h3>
     <hr>
-    <div class="mb-3">
-      <label class="form-label">Cron Expression</label>
-      <input type="text" class="form-control" id="cronExpression" aria-describedby="emailHelp"
-        placeholder="e.g., 0/5 * * * * * *">
-      <div id="cronExpressionHelp" class="form-text">Enter Cron expression</div>
+    <hr>
+    <div id="cronExtensionOptionContainer">
+      <h4>Cron Extansion Option</h4>
+      <div id="cronExtensionInputContainer">
+        <label class="form-label">- Cron Expression: </label>
+        <input type="text" class="form-control" id="cronExpression" aria-describedby="emailHelp"
+          placeholder="e.g., 0/5 * * * * * *">
+        <p id="cronExpressionHelp" class="description">Enter Cron expression (e.g., 0/5 * * * * * *)</p>
+      </div>
+      <!-- <div id="saveContainer">
+        <button id="saveButton" type="button" class="btn btn-primary">Save</button>
+        <img id="savedMark" src="img/saved-mark.svg" alt="savedMark" />
+      </div> -->
     </div>
-    <button id="saveButton" type="button" class="btn btn-primary">Save</button>
-    <br><br>
-    <div id="statusCircle"></div>
-    <div class="switchContainer">
-      <button id="startButton" type="button" class="btn btn-primary">Start</button>
-      <button id="stopButton" type="button" class="btn btn-primary">Stop</button>
+    <br>
+    <hr>
+    <div id="tabReloadOptionContainer">
+      <h4>Tab Reload Option</h4>
+      <div id="tabReloadActiveInput">
+        <label for="tabReloadOptionCheckbox">- enabled</label>
+        <input type="checkbox" id="tabReloadOptionCheckbox" name="tabReloadOptionCheckbox" />
+      </div>
+      <div id="tabReloadNextOption">
+        - Reload the
+        <input type="text" id="nextNumberInput" name="nextNumberInput" value="1">
+        next tab from the active tab
+        <p id="nextNumberHelp" class="description">Please Enter a number</p>
+        <p class="description">0 is the currently active tab.
+          If the input value is greater than the number of activated tabs, it is automatically registered as -1 of the
+          total number of tabs.</p>
+      </div>
+    </div>
+    <br>
+    <hr>
+    <div id="DriveOptionContainer">
+      <h4>Drive Option</h4>
+      <div id="statusCircle"></div>
+      <div class="switchContainer">
+        <button id="startButton" type="button" class="btn btn-primary">Start</button>
+        <button id="stopButton" type="button" class="btn btn-primary">Stop</button>
+      </div>
     </div>
     <hr>
     <a href="https://docs.oracle.com/cd/E12058_01/doc/doc.1014/e12030/cron_expressions.html">What is Cron
