--- a/src/popup.html
+++ b/src/popup.html
@@ -35,7 +35,7 @@
       </div>
       <div id="tabReloadNextOption">
         - Reload the
-        <input type="text" id="nextNumberInput" name="nextNumberInput" value="1">
+        <input type="text" id="nextNumberInput" name="nextNumberInput" placeholder="e.g., 1">
         next tab from the active tab
         <p id="nextNumberHelp" class="description">Please Enter a number</p>
         <p class="description">0 is the currently active tab.
@@ -49,18 +49,14 @@
       <h4>Drive Option</h4>
       <div id="statusCircle"></div>
       <div class="switchContainer">
-        <button id="startButton" type="button" class="btn btn-primary">Start</button>
-        <button id="stopButton" type="button" class="btn btn-primary">Stop</button>
+        <button id="startButton" type="button" class="btn">Start</button>
+        <button id="stopButton" type="button" class="btn">Stop</button>
       </div>
     </div>
     <hr>
     <a href="https://docs.oracle.com/cd/E12058_01/doc/doc.1014/e12030/cron_expressions.html">What is Cron
       Expression?</a>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
 </body>
 
 
