feat: 탭이 하나일 경우 reload 선택하도록 기능 추가

--- a/src/popup.html
+++ b/src/popup.html
@@ -30,7 +30,7 @@
     <div id="tabReloadOptionContainer">
       <h4>Tab Reload Option</h4>
       <div id="tabReloadActiveInput">
-        <label for="tabReloadOptionCheckbox">- enabled</label>
+        <label for="tabReloadOptionCheckbox">- enabled: </label>
         <input type="checkbox" id="tabReloadOptionCheckbox" name="tabReloadOptionCheckbox" />
       </div>
       <div id="tabReloadNextOption">
@@ -41,6 +41,10 @@
         <p class="description">0 is the currently active tab.
           If the input value is greater than the number of activated tabs, it is automatically registered as -1 of the
           total number of tabs.</p>
+      </div>
+      <div id="ifOneTabWindowReloadInput">
+        <label for="ifOneTabWindowReloadOptionCheckbox">- reload windows even if they have only one tab: </label>
+        <input type="checkbox" id="ifOneTabWindowReloadOptionCheckbox" name="ifOneTabWindowReloadOptionCheckbox" />
       </div>
     </div>
     <br>
